--- a/adminPro/package.json
+++ b/adminPro/package.json
@@ -12,5 +12,11 @@
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.7",
     "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
