--- a/vue-router/package.json
+++ b/vue-router/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "v-weui": "^0.1.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "weui": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
