--- a/vue-router/package.json
+++ b/vue-router/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "iview": "^2.9.0",
     "v-weui": "^0.1.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
